--- a/bibliography.html
+++ b/bibliography.html
@@ -276,11 +276,19 @@
 </div>
 <div class="citation" id="jacm85" role="doc-biblioentry">
 <span class="label"><span class="fn-bracket">[</span>JACM85<span class="fn-bracket">]</span></span>
-<p>Aravinda P. Sistla, Edmund M. Clarke: <em>The complexity of propositional linear temporal logics</em>. Journal of the ACM 32(3):733-749. ACM, 1985.</p>
+<p>Aravinda Prasad Sistla, Edmund M. Clarke: <em>The complexity of propositional linear temporal logics</em>. Journal of the ACM 32(3):733-749. ACM, 1985.</p>
 </div>
 <div class="citation" id="tse77" role="doc-biblioentry">
 <span class="label"><span class="fn-bracket">[</span>TSE77<span class="fn-bracket">]</span></span>
 <p>Leslie Lamport: <em>Proving the correctness of multiprocess programs</em>. Transaction of Software Engineering SE-3(2), 125-143, IEEE, 1977.</p>
+</div>
+<div class="citation" id="ipl85" role="doc-biblioentry">
+<span class="label"><span class="fn-bracket">[</span>IPL85<span class="fn-bracket">]</span></span>
+<p>Bowen Halpern, Fred B. Schneider: <em>Defining Liveness</em>. Information Processsing Letters 21, 1985.</p>
+</div>
+<div class="citation" id="fac94" role="doc-biblioentry">
+<span class="label"><span class="fn-bracket">[</span>FAC94<span class="fn-bracket">]</span></span>
+<p>Aravinda Prasad Sistla: <em>Safety, liveness, and fairness in temporal logic</em>. Formal Aspects of Computing 6. ACM. 1994</p>
 </div>
 </div>
 </section>
